--- a/EnemizerGui/EnemizerForm.resx
+++ b/EnemizerGui/EnemizerForm.resx
@@ -123,7 +123,10 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>157, 17</value>
   </metadata>
-  <data name="spawnrateTrackbar.ToolTip" xml:space="preserve">
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>157, 17</value>
+  </metadata>
+  <data name="absorbableItemsSpawnrateTrackbar.ToolTip" xml:space="preserve">
     <value>Basic Type - enemies are shuffled but not the groups
 eg. room with guards will have random guard in it
 Normal Type - enemies are shuffled with same types
@@ -134,7 +137,7 @@ Chaos Type - Any enemies can be anywhere
 Insanity Type - Every enemies are dangerous enemies
 </value>
   </data>
-  <data name="typeTrackbar.ToolTip" xml:space="preserve">
+  <data name="randomizationTypeTrackbar.ToolTip" xml:space="preserve">
     <value>Basic Type - enemies are shuffled but not the groups
 eg. room with guards will have random guard in it
 Normal Type - enemies are shuffled with same types
