--- a/EnemizerGui/EnemizerForm.resx
+++ b/EnemizerGui/EnemizerForm.resx
@@ -120,6 +120,17 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>157, 17</value>
   </metadata>
+  <data name="bossRandomizationTypesTrackbar.ToolTip" xml:space="preserve">
+    <value>Basic - all bosses are unique including G.Tower refights
+e.g you will have 2 lanmolas, 2 armos knigt, 2 moldorm
+Normal - same as Basic but refight are also random
+e.g you could have 2 kholdstare, 2 trinexx, 2 vitreous
+Chaos - this allow duplicated bosses
+e.g you could have 5 trinexx, 3 mothula, 2 armos, etc...</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>157, 17</value>
+  </metadata>
   <data name="absorbableItemsSpawnrateTrackbar.ToolTip" xml:space="preserve">
     <value>Basic Type - enemies are shuffled but not the groups
 eg. room with guards will have random guard in it
@@ -141,13 +152,5 @@ Hard Type - same as Normal but mix overworld enemies
 Chaos Type - Any enemies can be anywhere
 Insanity Type - Every enemies are dangerous enemies
 </value>
-  </data>
-  <data name="bossRandomizationTypesTrackbar.ToolTip" xml:space="preserve">
-    <value>Basic - all bosses are unique including G.Tower refights
-e.g you will have 2 lanmolas, 2 armos knigt, 2 moldorm
-Normal - same as Basic but refight are also random
-e.g you could have 2 kholdstare, 2 trinexx, 2 vitreous
-Chaos - this allow duplicated bosses
-e.g you could have 5 trinexx, 3 mothula, 2 armos, etc...</value>
   </data>
 </root>
