--- a/EnemizerGui/EnemizerForm.resx
+++ b/EnemizerGui/EnemizerForm.resx
@@ -123,6 +123,9 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>157, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>157, 17</value>
+  </metadata>
   <data name="randomizationTypeTrackbar.ToolTip" xml:space="preserve">
     <value>Basic Type - enemies are shuffled but not the groups
 eg. room with guards will have random guard in it
